[gd_scene load_steps=6 format=3 uid="uid://4siqre3jhe80"]

[ext_resource type="Script" path="res://addons/cyclops_level_builder/cyclops_global_scene.gd" id="1_nu1d3"]
[ext_resource type="FontFile" uid="uid://dejaio63tyi02" path="res://addons/cyclops_level_builder/art/fonts/Roboto/Roboto-Regular.ttf" id="2_savc6"]
[ext_resource type="Script" path="res://addons/cyclops_level_builder/cyclops_overlay.gd" id="3_uf260"]

[sub_resource type="PlaneMesh" id="PlaneMesh_sl0cw"]

[sub_resource type="ImmediateMesh" id="ImmediateMesh_7cfi3"]

[node name="CyclopsGlobals" type="Node3D"]
script = ExtResource("1_nu1d3")
units_font = ExtResource("2_savc6")

[node name="ControlMesh" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("PlaneMesh_sl0cw")

[node name="ToolInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("ImmediateMesh_7cfi3")

[node name="VertexGroup" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="GizmoControl" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="cyclops_overlay" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_uf260")
